<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.3">
  <DUT Name="ST_CoEdata" Id="{92eb86cd-5595-4f29-a656-a09bb13a9026}">
    <Declaration><![CDATA[TYPE ST_CoEdata :
STRUCT
	nIndex		: WORD;		//Index of CoE Address ex. 16#01
	nSubIndex	: BYTE;		//SubIndex of CoE Address ex. 16#01
	dwData		: DWORD;	//
	nDataLen	: UDINT;	//
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>